# dj-data-room

./: CLAUDE.md  README.md  pyproject.toml
data_room/: admin.py  admin_actions.py  apps.py  conf.py  decorators.py  hooks.py  policies.py  schemas.py  signals.py  storage.py  urls.py  utils.py
data_room/forms/: __init__.py  confirm_clients.py  edit_client.py  upload_protected_document.py
data_room/helpers/: __init__.py  find_similar_client.py  get_company_documents.py  get_document.py  get_project.py  orgchart.py  update_document_status.py
data_room/migrations/: 0001_initial.py  0002_protecteddocument_markdown.py  0003_protecteddocument_tokens.py  0004_documenttag_protecteddocument_tag.py  0005_protecteddocument_use_ai_protecteddocument_use_web.py  0006_alter_protecteddocument_use_ai.py  0007_alter_protecteddocument_file_and_more.py  0008_projectzip.py  0009_protecteddocument_indexed_chunks.py  0010_protecteddocument_indexing_attempts.py  0011_protecteddocument_original.py  0012_alter_projectzip_zip_file_and_more.py  0013_remove_protecteddocument_project_and_more.py  0014_remove_protectedprojectdocument_tag_and_more.py  0015_merge_linked_client_into_client.py  0016_projectcompanylink.py  0017_alter_protectedclientdocument_document_type_and_more.py  0018_protectedclientdocument_financial_extraction_status.py  0019_protectedprojectdocument_extraction_status.py  0020_alter_protectedclientdocument_document_type_and_more.py  0021_drop_orphaned_accounting_tables.py  0022_protectedclientdocument_json_guv_mapped.py  0023_protectedclientdocument_pages_bilanz_and_more.py  0024_accounting_framework_fields.py  0025_v2_preview_shadow_cache.py  0026_review_loop_fields.py  0027_review_status_queued_choice.py  0028_doc_json_bilanz_mapped_split_status.py
data_room/models/: __init__.py  choices.py  project_company_link.py  project_zip.py  protected_base_document.py  (+2 more)
(+102 files in other folders)
