[project]
name = "dj-data-room"
version = "0.1.0"
description = "Protected document data room for Django: project/client document management with pluggable permission policies, OTP-gated views, watermarked PDF previews, ZIP export, indexing pipeline orchestration and host hooks for LLM extraction (app package `data_room`)."
authors = [{ name = "Stefan Ostrowski", email = "ostrowski@addvendo.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "django>=5,<6",
    "celery>=5,<6",
    "pillow>=12,<13",
    "pymupdf>=1.26,<2",
    "pdf2image>=1,<2",
    "easy-thumbnails>=2,<3",
    "django-otp>=1,<2",
    "pydantic>=2,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["data_room"]
